2007-04-11  Thomas Heller  <theller@python.net>

	* Add a 'compilerflags' optional argument to the include()
	function.  This allows to specify the compilerflags for h2xml when
	the code is 'compiled'.  Default is 'compilerflags=["-c"]' which
	will include #define constants.

2007-03-01  Thomas Heller  <theller@python.net>

	* Applied a patch from Michal J. Gajda: This patch adds the
	--preload option to xml2py.py to resolve missing references from
	DLLs.  See
	http://sourceforge.net/tracker/?func=detail&aid=1670758&group_id=71702&atid=532156

	* Added ctypeslib.contrib.pythonhdr module, by Lenard Lindstrom:
	The is a python module, pythonhdr.py, which declares several,
	hopefully useful, Python C API declarations and functions. Also
	includes is a unit test.

2007-02-16  Thomas Heller  <theller@python.net>

	* The xml2py script now also accepts full pathnames to shared
	libraries in the -l command line switch.

	* Fix failing tests on linux.

	* The code generator will now happily generate Python code for the
	C 'long double' type.  This type is not currently supported by
	ctypes; so the generated code must be fixed manually.  Still
	better than to let the code generation crash.

2007-02-15  Thomas Heller  <theller@python.net>

	* In ctypeslib.dynamic_module the function update_from() has been
	removed.  Use the include() function instead, which will - if
	needed - recompile the C code passed to it and adds generated
	Python code to the calling module.

	* The xml2py script can now add comments for functions and
	structures into the generated code.  The comments include the name
	and linenumber of the header file where the function/structure was
	defined, plus the C function argument names.

2006-12-08  Thomas Heller  <theller@python.net>

	* Created new module ctypeslib.util.  This module contains small
	helper functions.  When using these functions it *may* be better
	to copy them into the own project instead of having ctypeslib as
	dependency.  YMMV.
